--- a/app_server/views/_includes/sharedHTMLfunctions.jade
+++ b/app_server/views/_includes/sharedHTMLfunctions.jade
@@ -3,3 +3,12 @@ mixin outputRating(rating)
     span.glyphicon.glyphicon-star
   - for(var i = rating; i < 5; i++)
     span.glyphicon.glyphicon-star-empty
+
+mixin formatDate(dateString)
+  - var date = new Date(dateString);
+  - var monthNames = ['Janeiro', 'Fevereiro', 'Março', 'Abril', 'Maio', 'Junho', 'Julho', 'Agosto', 'Setembro', 'Outubro', 'Novembro', 'Dezembro'];
+  - var d = date.getDate();
+  - var m = monthNames[date.getMonth()];
+  - var y = date.getFullYear();
+  - var output = d + ' de ' + m + ' de 	' + y;
+  =output
